--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <font size="3">
 
 <p>
-<a href="http://faculty.ecnu.edu.cn/s/3556/main.jspy">Research Associate Professor</a><br>
+<a href="https://facultyold.ecnu.edu.cn/s/3556/main.jspy">Research Associate Professor</a><br>
 School of Computer Science and Software Engineering<br>
 East China Normal University<br><br>
 Email: ab AT sei.ecnu.edu.cn where a = xin and b = li<br>
@@ -20,14 +20,6 @@ Office: B1116, Science Building<br>
 3663 North Zhongshan Road<br>
 Shanghai 200062, China<br>
 </p>
-<!--
-<h3>Recent Technical Reports</h3>
-<ul>
-<li>Xin Li. 
-<b>Reachability Analysis of Conditional Pushdown Systems with Patterns.</b> <br>
-</li>
-</ul>
--->
 
 <h3>Current Research Projects</h3>
 <ul><li>Higher-order model checking and its applications
@@ -44,7 +36,7 @@ Shanghai 200062, China<br>
 <li>Zhihao Wang, Xin Li. <br>
 <b>Hybrid-TE: Hybrid Translation-based Temporal Knowledge Graph Embedding.</b><br>
 The 31st International Conference on Tools with Artificial Intelligence (ICTAI19). <br>
-<a href="http://www-kb.is.s.u-tokyo.ac.jp/~li-xin/ictai19.pdf">[author's refined version]</a>
+<a href="papers/ictai19.pdf">[author's refined version]</a>
 </li>
 </ul>
  
@@ -72,7 +64,7 @@ Oral presentation at the 2nd National conference on formal methods and applicati
 <b>A Sliding-Window Algorithm for On-The-Fly Interprocedural Program Analysis.</b><br>
 The 19th International Conference on Formal Engineering Methods (ICFEM17).
 <br>
-<a href="http://www-kb.is.s.u-tokyo.ac.jp/~li-xin/mwpds.pdf">[author's long version with proofs (dated on August 20, to be complete soon)]</a>
+<a href="papers/mwpds.pdf">[author's long version with proofs (dated on August 20, to be complete soon)]</a>
 <br>
 </li>
 </ul>
@@ -80,7 +72,7 @@ The 19th International Conference on Formal Engineering Methods (ICFEM17).
 <li>Xin Li, Naoki Kobayashi. <br>
 <b>Equivalence-Based Abstraction Refinement for muHORS Model Checking.</b> <br>
 The 14th International Symposium on Automated Technology for Verification and Analysis (ATVA16). <br>
-<a href="http://www-kb.is.s.u-tokyo.ac.jp/~li-xin/atva16long.pdf">[author's long version with fixes]</a>
+<a href="papers/atva16long.pdf">[author's long version with fixes]</a>
 </li>
 </ul>
 
@@ -88,18 +80,19 @@ The 14th International Symposium on Automated Technology for Verification and An
 <li>Naoki Kobayashi, Xin Li. <br>
 <b>Automata-Based Abstraction Refinement for muHORS Model Checking.</b><br>
 The 30th Annual ACM/IEEE Symposium on Logic in Computer Science (LICS15).<br>
-<a href="http://www-kb.is.s.u-tokyo.ac.jp/~li-xin/lics15long.pdf">[author's long version]</a>
+<a href="papers/lics15long.pdf">[author's long version]</a>
 </ul>
 
 <ul>
 <li>Hua Vy Le Thanh, Xin Li. <br>
 <b>An On-The-Fly Algorithm for Conditional Weighted Pushdown Systems.</b><br>
 IPSJ Transactions on Programming, 7(4),1-7, 2014.<br>
-<a href="http://www-kb.is.s.u-tokyo.ac.jp/~li-xin/ipsj14.pdf">[author's long version]</a>
+<a href="papers/ipsj14.pdf">[author's long version]</a>
 </ul>
 
 <h3>Teaching</h3>
 <ul>
+<li>Spring 2020, Data Structures and Algorithms (undergraduates)</li>
 <li>Fall 2019, Design and Analysis of Algorithms (master students)</li>
 <li>Fall 2018, Design and Analysis of Algorithms (master students)</li>
 </ul>
